fix: added xs missing border radius and adjusted others

--- a/infinityui/src/styles/_border-radius.scss
+++ b/infinityui/src/styles/_border-radius.scss
@@ -1,7 +1,8 @@
 // _border-radius.scss
 :root {
-  --border-radius-sm: 2px;
-  --border-radius-md: 4px;
+  --border-radius-xs: 2px;
+  --border-radius-sm: 4px;
+  --border-radius-md: 6px;
   --border-radius-lg: 8px;
   --border-radius-xl: 12px;
   --border-radius-xxl: 16px;
